hphp/hack/test/typecheck/array/disallow_php_array_when_dictionary_like_array_is_required.php.exp
File "disallow_php_array_when_dictionary_like_array_is_required.php", line 10, characters 30-53:
Invalid argument (Typing[4110])
File "disallow_php_array_when_dictionary_like_array_is_required.php", line 3, characters 37-54:
Expected darray<string, int>
File "disallow_php_array_when_dictionary_like_array_is_required.php", line 5, characters 36-40:
But got varray_or_darray<arraykey, _>
